objects/SFDC_to_SFDC_Log__c.object
<CustomObject>
    <fields>
        <fullName>Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Body__c</fullName>
        <label>Request Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Body__c</fullName>
        <label>Response Body</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Code__c</fullName>
        <label>Response Code</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SFDC to SFDC Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Response_Code__c</columns>
        <columns>Response_Body__c</columns>
        <columns>Error__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Latest_errors</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Response_Code__c</columns>
        <columns>Error__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>11/11/2019 8:08 AM</value>
        </filters>
        <filters>
            <field>Error__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Latest errors</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Log N0</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SFDC to SFDC Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>